--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-design wow fadeInUp">
                 <div class="portfolio-wrap">
                     <figure>
-                        <img src="img/portfolio/design3.jpg" class="img-fluid" alt="">
-                        <a href="img/portfolio/design3.jpg" data-lightbox="portfolio" data-title="Design 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                        <img src="img/portfolio/design3.png" class="img-fluid" alt="">
+                        <a href="img/portfolio/design3.png" data-lightbox="portfolio" data-title="Design 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                         <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                     </figure>
 
