--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
                   <li><strong>Email:</strong> elangsurya19@gmail.com</li>
                 </ul>                  
               </div>
+              <p>
+                <div class="download-button">
+                  <a class="btn btn-info btn-lg" href="assets/Elang Surya.pdf" target="_blank"><i class="fa fa-download"></i>download my cv</a>
+                </div>                
+              </p>
+
             </div>
           </div>
 
@@ -156,7 +162,6 @@
                   </ul>                
                 </div>                
               </div>
-
             </div>
           </div>
 
@@ -297,6 +302,12 @@
           </div>
 
           <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">SQL <i class="val">75%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">Bootstrap <i class="val">80%</i></span>
             </div>
@@ -360,14 +371,14 @@
             <div class="col-lg-3 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
                 <div class="portfolio-wrap">
                     <figure>
-                        <img src="assets/img/portfolio/web3.jpg" style="height: 240px" class="img-fluid" alt="">
-                        <a href="assets/img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                        <img src="assets/img/portfolio/web1.jpg" style="height: 240px" class="img-fluid" alt="">
+                        <a href="assets/img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
                         <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                     </figure>
 
                     <div class="portfolio-info">
-                        <h4><a href="#">Web 3</a></h4>
-                        <p>Web</p>
+                        <h4><a href="#">Web 1</a></h4>
+                        <p>Aplikasi Buku Tamu</p>
                     </div>
                 </div>
             </div>
@@ -405,14 +416,44 @@
             <div class="col-lg-3 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
                 <div class="portfolio-wrap">
                   <figure>
-                    <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                    <a href="assets/img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                    <img src="assets/img/portfolio/web2.png" style="height: 240px" class="img-fluid" alt="">
+                    <a href="assets/img/portfolio/web2.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
                     <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                   </figure>
 
                   <div class="portfolio-info">
-                    <h4><a href="#">Web 1</a></h4>
-                    <p>Web</p>
+                    <h4><a href="#">Web 2</a></h4>
+                    <p>Web App Perpustakaan PDO</p>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
+                <div class="portfolio-wrap">
+                  <figure>
+                    <img src="assets/img/portfolio/web3.jpg" style="height: 240px" class="img-fluid" alt="">
+                    <a href="assets/img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                    <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  </figure>
+
+                  <div class="portfolio-info">
+                    <h4><a href="#">Web 3</a></h4>
+                    <p>Web App Penjualan</p>
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
+                <div class="portfolio-wrap">
+                  <figure>
+                    <img src="assets/img/portfolio/web4.png" style="height: 240px" class="img-fluid" alt="">
+                    <a href="assets/img/portfolio/web4.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                    <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                  </figure>
+
+                  <div class="portfolio-info">
+                    <h4><a href="#">Web 4</a></h4>
+                    <p>Inventory</p>
                   </div>
                 </div>
             </div>
