--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
             <div class="col-lg-3 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
                 <div class="portfolio-wrap">
                   <figure>
-                    <img src="assets/img/portfolio/web4.png" style="height: 240px" class="img-fluid" alt="">
-                    <a href="assets/img/portfolio/web4.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                    <img src="assets/img/portfolio/web4.PNG" style="height: 240px" class="img-fluid" alt="">
+                    <a href="assets/img/portfolio/web4.PNG" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
                     <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                   </figure>
 
