--- a/index.html
+++ b/index.html
@@ -188,20 +188,35 @@
               </div> -->
               <div class="resume">
                   <ul class="timeline">
-                      <li class="timeline-inverted">
+
+                      <!-- <li class="timeline-inverted">
+                          <div class="posted-date">
+                            <span class="month">Juni 2018 - Sekarang</span>
+                          </div>
+
+                          <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
+                              <div class="timeline-content">
+                                  <div class="timeline-heading">
+                                      <h3> </h3>
+                                      <span>Web Developer</span>
+                                  </div>
+                              </div> 
+                          </div> 
+                      </li> -->
+                      <!-- <li class="timeline-inverted">
                           <div class="posted-date">
                             <span class="month">Juni 2017 - Sekarang</span>
-                          </div><!-- /posted-date -->
+                          </div>
 
                           <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
                               <div class="timeline-content">
                                   <div class="timeline-heading">
                                       <h3>PT. Arkadia Global Teknologi</h3>
                                       <span>Web Developer</span>
-                                  </div><!-- /timeline-heading -->
-                              </div> <!-- /timeline-content -->
-                          </div> <!-- /timeline-panel -->
-                      </li>
+                                  </div>
+                              </div> 
+                          </div> 
+                      </li> -->
 
                       <li>
                           <div class="posted-date">
@@ -304,6 +319,18 @@
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">SQL <i class="val">75%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">CodeIgniter <i class="val">60%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">Json <i class="val">45%</i></span>
             </div>
           </div>
 
