--- a/index.html
+++ b/index.html
@@ -203,49 +203,81 @@
                               </div> 
                           </div> 
                       </li> -->
-                      <!-- <li class="timeline-inverted">
+                      
+                    <li>
+                        <div class="posted-date">
+                        <span class="month">Juni 2018 - Sekarang</span>
+                        </div><!-- /posted-date -->
+
+                        <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
+                            <div class="timeline-content">
+                                <div class="timeline-heading">
+                                    <h3>PT. Infomedia Solusi Humanika</h3>
+                                    <span>PHP Web Developer (Codeigniter) - Telkom CSOC</span>
+                                </div><!-- /timeline-heading -->
+                            </div> <!-- /timeline-content -->
+                        </div><!-- /timeline-panel -->
+                    </li>
+
+                    <li class="timeline-inverted">
                           <div class="posted-date">
-                            <span class="month">Juni 2017 - Sekarang</span>
+                            <span class="month">Juni 2017 - Mei 2018</span>
                           </div>
 
                           <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
                               <div class="timeline-content">
                                   <div class="timeline-heading">
-                                      <h3>PT. Arkadia Global Teknologi</h3>
-                                      <span>Web Developer</span>
+                                      <h3>Arkadia Global Teknologi</h3>
+                                      <span>PHP Web Developer (Slim Framework, Yii2, Wordpress)</span>
                                   </div>
                               </div> 
                           </div> 
-                      </li> -->
-
-                      <li>
-                          <div class="posted-date">
-                            <span class="month">Januari 2016 - Oktober 2016</span>
-                          </div><!-- /posted-date -->
-
-                          <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
-                              <div class="timeline-content">
-                                  <div class="timeline-heading">
-                                      <h3>PT. Ariesta Religi Travel</h3>
-                                      <span>Web Developer &amp; Design Grafis</span>
-                                  </div><!-- /timeline-heading -->
-                              </div> <!-- /timeline-content -->
-                          </div><!-- /timeline-panel -->
                       </li>
-                      <li class="timeline-inverted">
-                          <div class="posted-date">
-                            <span class="month">Maret 2015 - Sekarang</span>
-                          </div><!-- /posted-date -->
 
-                          <div class="timeline-panel wow fadeInUp" style="visibility: hidden; animation-name: none;">
-                              <div class="timeline-content">
-                                  <div class="timeline-heading">
-                                      <h3>Freelance Programmer</h3>
-                                      <span>Web Developer, Disain Grafis</span>
-                                  </div><!-- /timeline-heading -->
-                              </div> <!-- /timeline-content -->
-                          </div> <!-- /timeline-panel -->
-                      </li>
+                    <!-- <li class="timeline-inverted">
+                        <div class="posted-date">
+                          <span class="month">Juni 2018 - Sekarang</span>
+                        </div>
+
+                        <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
+                            <div class="timeline-content">
+                                <div class="timeline-heading">
+                                    <h3>PT. Infomedia Solusi Humanika</h3>
+                                    <span>Web Developer (Telkom CSOC)</span>
+                                </div>
+                            </div> 
+                        </div> 
+                    </li> -->
+
+                    <li>
+                        <div class="posted-date">
+                        <span class="month">Januari 2016 - Oktober 2016</span>
+                        </div><!-- /posted-date -->
+
+                        <div class="timeline-panel wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;">
+                            <div class="timeline-content">
+                                <div class="timeline-heading">
+                                    <h3>PT. Ariesta Religi Travel</h3>
+                                    <span>Web Developer &amp; Design Grafis</span>
+                                </div><!-- /timeline-heading -->
+                            </div> <!-- /timeline-content -->
+                        </div><!-- /timeline-panel -->
+                    </li>
+
+                    <li class="timeline-inverted">
+                        <div class="posted-date">
+                        <span class="month">Maret 2015 - Sekarang</span>
+                        </div><!-- /posted-date -->
+
+                        <div class="timeline-panel wow fadeInUp" style="visibility: hidden; animation-name: none;">
+                            <div class="timeline-content">
+                                <div class="timeline-heading">
+                                    <h3>Freelance Programmer</h3>
+                                    <span>Web Developer, Disain Grafis</span>
+                                </div><!-- /timeline-heading -->
+                            </div> <!-- /timeline-content -->
+                        </div> <!-- /timeline-panel -->
+                    </li>
 
                   </ul>
               </div>
@@ -282,7 +314,7 @@
 
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">HTML <i class="val">90%</i></span>
+              <span class="skill">HTML/HTML5 <i class="val">90%</i></span>
             </div>
           </div>
 
@@ -300,19 +332,19 @@
 
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Yii2 <i class="val">60%</i></span>
+              <span class="skill">Yii2 <i class="val">75%</i></span>
             </div>
           </div>
 
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Laravel <i class="val">45%</i></span>
+              <span class="skill">Laravel <i class="val">50%</i></span>
             </div>
           </div>
 
           <div class="progress">
             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Ajax <i class="val">20%</i></span>
+              <span class="skill">Ajax <i class="val">45%</i></span>
             </div>
           </div>
 
@@ -323,8 +355,8 @@
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">CodeIgniter <i class="val">60%</i></span>
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">CodeIgniter <i class="val">75%</i></span>
             </div>
           </div>
 
@@ -341,8 +373,26 @@
           </div>
 
           <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">Linux Server <i class="val">45%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">CRON JOB <i class="val">40%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
               <span class="skill">Git <i class="val">75%</i></span>
+            </div>
+          </div>
+
+          <div class="progress">
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">Docker <i class="val">15%</i></span>
             </div>
           </div>
 
