--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
                   <li><strong>Tanggal lahir:</strong> 05 Oktober 1992</li>
                   <li><strong>Alamat:</strong> Jl. Adhi Karya, Kedoya Selatan, Jakarta Barat</li>
                   <li><strong>Telepon:</strong> 0895 3468 84503</li>
-                  <li><strong>Email:</strong> elangsurya19@gmail.com</li>
+                  <li><strong>Email:</strong> elangsurya91@gmail.com</li>
                 </ul>
               </div>
               <p>
                 <div class="download-button">
-                  <a class="btn btn-info btn-lg" href="assets/Elang Surya.pdf" target="_blank"><i class="fa fa-download"></i>download my cv</a>
+                  <a class="btn btn-info btn-lg" href="#" target="_blank"><i class="fa fa-download"></i>download my cv</a>
                 </div>
               </p>
 
