--- a/index.html
+++ b/index.html
@@ -636,8 +636,8 @@
             <h4>Sosial Media</h4>
             <p></p>
             <div class="social-links">
-              <a href="https://twitter.com/eR1an9" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.facebook.com/eR1an9" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/elangsurya" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/elangsurya" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="https://www.instagram.com/suneagles/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="https://github.com/eR1an9" target="_blank" class="github"><i class="fa fa-github"></i></a>
