--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <li><strong>Tanggal lahir:</strong> 05 Oktober 1992</li>
                   <li><strong>Alamat:</strong> Jl. Adhi Karya, Kedoya Selatan, Jakarta Barat</li>
                   <li><strong>Telepon:</strong> 0895 3468 84503</li>
-                  <li><strong>Email:</strong> elangsurya91@gmail.com</li>
+                  <li><strong>Email:</strong> emailelangsurya@gmail.com</li>
                 </ul>
               </div>
               <p>
@@ -596,7 +596,7 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:elangsurya91@gmail.com">elangsurya91@gmail.com</a></p>
+              <p><a href="mailto:emailelangsurya@gmail.com">emailelangsurya@gmail.com</a></p>
             </div>
           </div>
 
@@ -627,7 +627,7 @@
                 Kb. Jeruk, Jakarta Barat<br>
                 Indonesia<br>
               <strong>Phone:</strong> +62 8953 4688 4509<br>
-              <strong>Email:</strong> elangsurya91@gmail.com<br>
+              <strong>Email:</strong> emailelangsurya@gmail.com<br>
             </p>
 
           </div>
