--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <ul>
                   <li><strong>Tanggal lahir:</strong> 05 Oktober 1992</li>
                   <li><strong>Alamat:</strong> Jl. Adhi Karya, Kedoya Selatan, Jakarta Barat</li>
-                  <li><strong>Telepon:</strong> 0895 3468 84503</li>
+                  <li><strong>Telepon:</strong> 0895 3468 8450x</li>
                   <li><strong>Email:</strong> emailelangsurya@gmail.com</li>
                 </ul>
               </div>
@@ -588,7 +588,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+62895346884509">+62 8953 4688 4509</a></p>
+              <p><a href="tel:+6289534688450x">+62 8953 4688 450x</a></p>
             </div>
           </div>
 
@@ -626,7 +626,7 @@
                 JL Adhi Karya, Kedoya Selatan <br>
                 Kb. Jeruk, Jakarta Barat<br>
                 Indonesia<br>
-              <strong>Phone:</strong> +62 8953 4688 4509<br>
+              <strong>Phone:</strong> +62 8953 4688 450x<br>
               <strong>Email:</strong> emailelangsurya@gmail.com<br>
             </p>
 
@@ -640,7 +640,7 @@
               <a href="https://www.facebook.com/elangsurya" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="https://www.instagram.com/suneagles/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="https://github.com/eR1an9" target="_blank" class="github"><i class="fa fa-github"></i></a>
+              <a href="https://github.com/langsurya" target="_blank" class="github"><i class="fa fa-github"></i></a>
             </div>
           </div>
 
