--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h2 class="title"><a href="#">Elang Surya</a></h2>
               <div class="biography">
                 <ul>
-                  <li><strong>Tanggal lahir:</strong> 05 Oktober 1992</li>
+                  <li><strong>Tanggal lahir:</strong> 1992</li>
                   <li><strong>Alamat:</strong> Jl. Adhi Karya, Kedoya Selatan, Jakarta Barat</li>
                   <li><strong>Telepon:</strong> 0895 3468 8450x</li>
                   <li><strong>Email:</strong> emailelangsurya@gmail.com</li>
